# ObjectRuntime

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  ObjectRuntime.sln  build.ninja
OCRuntime/: IRRuntime.cs  OCRuntime.csproj  Program.cs
OCRuntime/IR/: ModuleDto.cs
OCRuntime/Runtime/: CallFrame.cs  ManagedObject.cs  ValueHelpers.cs
OCRuntime/TextIR/: TextIrLexer.cs  TextIrParser.cs
Runtimes/OIRRuntime/: OIRuntime.csproj  Program.cs  README.md
Runtimes/ObjectIR.Core/IR/: MethodDefinition.cs  Methods.cs
Runtimes/ObjectIR.Runtime.Wrapper/: NativeRuntime.cs  ObjectIR.Runtime.Wrapper.csproj
Runtimes/SharpIR/: SharpIR.csproj
Runtimes/thingy/: Program.cs  main.json  thingy.csproj
include/: objectir_plugin.hpp  objectir_plugin_api.h  objectir_plugin_helpers.hpp  objectir_runtime.hpp  objectir_type_names.hpp
plugins/: example_override_plugin.cpp
python/: Config.py  Generics.py
src/: DiagnosticsProvidr.cpp  instruction_executor.cpp  ir_loader.cpp  ir_text_parser.cpp  main.cpp  objectir_plugin_api.cpp  objectir_runtime.cpp  runtime_c_api.cpp  stdlib.cpp
